--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         </pattern>
                   
                         <!-- Insert your profile (recommended size: 640 x 940) -->
-                        <image class="home__img" id="imageBlob" width="640" height="925" href="D:\web teerbaru\gambar dzaki 1.svg"/>
+                        <image class="home__img" id="imageBlob" width="640" height="925" href="D:gambar dzaki 1.svg"/>
                      </defs>
                   </svg>
                </div>
