--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         </pattern>
                   
                         <!-- Insert your profile (recommended size: 640 x 940) -->
-                        <image class="home__img" id="imageBlob" width="640" height="925" href="D:gambar dzaki 1.svg"/>
+                        <image class="home__img" id="imageBlob" width="640" height="925" href="gambar dzaki 1.svg"/>
                      </defs>
                   </svg>
                </div>
@@ -166,7 +166,7 @@
                         </pattern>
                   
                         <!-- Insert your profile (recommended size: 640 x 940) -->
-                        <image class="about__img" id="imageBorder" width="640" height="940" href="D:\web teerbaru\foto dzaki 2.png">
+                        <image class="about__img" id="imageBorder" width="640" height="940" href="foto dzaki 2.png">
                      </defs>
                   </svg> 
                </div>
