--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                      <span class="projects__subtitle">Children games</span>
                      <h2 class="projects__title">Games</h2>
 
-                     <a href="isi" class="projects__button">
+                     <a href="https://github.com/muhammaddz4ki/Muhammad_dzaki/blob/621d1eaeed903f25a995b1ecb95ca125f2cd06c1/223443041_muhammad%20dzaki%20projek%20aka.docx" class="projects__button">
                         View Project <i class="ri-external-link-fill"></i>
                      </a>
                   </div>  
