--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                      <span class="projects__subtitle">AI API</span>
                      <h2 class="projects__title" >AI</h2>
 
-                     <a href="isi" class="projects__button">
+                     <a href="https://github.com/muhammaddz4ki/Muhammad_dzaki/blob/b6b97cf4cdc8bc57585e5b22e274c2b3669e25fa/LAPORAN%20PRAKTEK%20AKA%20MUHAMMAD%20DZAKI.docx" class="projects__button">
                         View Project <i class="ri-external-link-fill"></i>
                      </a>
                   </div>  
