--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                      <span class="projects__subtitle">AI API</span>
                      <h2 class="projects__title" >AI</h2>
 
-                     <a href="https://github.com/muhammaddz4ki/Muhammad_dzaki/blob/621d1eaeed903f25a995b1ecb95ca125f2cd06c1/223443041_muhammad%20dzaki%20projek%20aka.docx" class="projects__button">
+                     <a href="https://github.com/muhammaddz4ki/Muhammad_dzaki/blob/cb21014ce63a77d4d0046cc10436088cfc7decb4/LAPORAN%20PRAKTEK%20AKA%20MUHAMMAD%20DZAKI.docx" class="projects__button">
                         View Project <i class="ri-external-link-fill"></i>
                      </a>
                   </div>  
