--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                      <span class="projects__subtitle">AI API</span>
                      <h2 class="projects__title" >AI</h2>
 
-                     <a href="https://github.com/muhammaddz4ki/Muhammad_dzaki/blob/cb21014ce63a77d4d0046cc10436088cfc7decb4/LAPORAN%20PRAKTEK%20AKA%20MUHAMMAD%20DZAKI.docx" class="projects__button">
+                     <a href="https://github.com/muhammaddz4ki/Muhammad_dzaki/blob/346d3a8948905b1003cfd269e8d3f46dc9a433bb/UAS_LAPORAN%20PROJEK%20FINAL_MUHAMMAD%20DZAKI%20223443042.docx" class="projects__button">
                         View Project <i class="ri-external-link-fill"></i>
                      </a>
                   </div>  
@@ -254,7 +254,7 @@
                      <span class="projects__subtitle">Library system</span>
                      <h2 class="projects__title">System</h2>
 
-                     <a href="https://github.com/muhammaddz4ki/Muhammad_dzaki/blob/346d3a8948905b1003cfd269e8d3f46dc9a433bb/UAS_LAPORAN%20PROJEK%20FINAL_MUHAMMAD%20DZAKI%20223443042.docx" class="projects__button">
+                     <a href="isi" class="projects__button">
                         View Project <i class="ri-external-link-fill"></i>
                      </a>
                   </div>  
