--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@
                   <img src="isi" alt="projects image" class="projects__img">
 
                    <div class="projects">
-                     <span class="projects__subtitle">Children games</span>
-                     <h2 class="projects__title">Games</h2>
+                     <span class="projects__subtitle">AI API</span>
+                     <h2 class="projects__title">AI</h2>
 
                      <a href="https://github.com/muhammaddz4ki/Muhammad_dzaki/blob/621d1eaeed903f25a995b1ecb95ca125f2cd06c1/223443041_muhammad%20dzaki%20projek%20aka.docx" class="projects__button">
                         View Project <i class="ri-external-link-fill"></i>
@@ -235,11 +235,11 @@
 
                </article>
                <article class="projects">
-                  <img src="isi" alt="projects image" class="projects__img">
+                  <img src="https://github.com/muhammaddz4ki/Muhammad_dzaki/blob/d3eea3e49f89a1e03c0762dbd35ee63b0b8772b5/LAPORAN%20PRAKTEK%20AKA%20MUHAMMAD%20DZAKI.docx" alt="projects image" class="projects__img">
 
                    <div class="projects">
-                     <span class="projects__subtitle">AI API</span>
-                     <h2 class="projects__title" >AI</h2>
+                     <span class="projects__subtitle">CHILDREN GAMES</span>
+                     <h2 class="projects__title" >GAMES</h2>
 
                      <a href="https://github.com/muhammaddz4ki/Muhammad_dzaki/blob/346d3a8948905b1003cfd269e8d3f46dc9a433bb/UAS_LAPORAN%20PROJEK%20FINAL_MUHAMMAD%20DZAKI%20223443042.docx" class="projects__button">
                         View Project <i class="ri-external-link-fill"></i>
