--- a/index.html
+++ b/index.html
@@ -219,47 +219,49 @@
             <h2 class="section__title">
                Recent Projects
             </h2>
+<div class="projects__container contianer grid">
+               <article class="projects__card">
+                  <img src="assets/img/bike.jfif" alt="projects image" class="projects__img">
 
-            <div class="projects">
-               <article class="projects">
-                  <img src="isi" alt="projects image" class="projects__img">
+                   <div class="projects__modal">
+                     <span class="projects__subtitle">CHILDREN GAMAES</span>
+                     <h2 class="projects__title">GAMES</h2>
 
-                   <div class="projects">
+                     <a href="https://github.com/LamnidarMuharamsah/Cyclistic_Bike_Trip/blob/main/cyclistic-bike-share-project.ipynb" class="projects__button">
+                        View Project <i class="ri-external-link-fill"></i>
+                     </a>
+                  </div>  
+
+               </article>
+               <article class="projects__card">
+                  <img src="assets/img/project-img-1.jpg" alt="projects image" class="projects__img">
+
+                   <div class="projects__modal">
                      <span class="projects__subtitle">AI API</span>
-                     <h2 class="projects__title">AI</h2>
+                     <h2 class="projects__title" >AI</h2>
 
-                     <a href="https://github.com/muhammaddz4ki/Muhammad_dzaki/blob/621d1eaeed903f25a995b1ecb95ca125f2cd06c1/223443041_muhammad%20dzaki%20projek%20aka.docx" class="projects__button">
+                     <a href="https://drive.google.com/file/d/1kN7xsIud8cBHEP0lcfnet6KvNwpxmXWU/view?usp=sharing" class="projects__button">
                         View Project <i class="ri-external-link-fill"></i>
                      </a>
                   </div>  
 
                </article>
-               <article class="projects">
-                  <img src="ISI" alt="projects image" class="projects__img">
+               <article class="projects__card">
+                  <img src="assets/img/project-img-4.jpg" alt="projects image" class="projects__img">
 
-                   <div class="projects">
-                     <span class="projects__subtitle">CHILDREN GAMES</span>
-                     <h2 class="projects__title" >GAMES</h2>
+                   <div class="projects__modal">
+                     <span class="projects__subtitle">LIBRARY SYSTEM</span>
+                     <h2 class="projects__title">SYSTEM</h2>
 
-                     <a href="https://github.com/muhammaddz4ki/Muhammad_dzaki/blob/d3eea3e49f89a1e03c0762dbd35ee63b0b8772b5/LAPORAN%20PRAKTEK%20AKA%20MUHAMMAD%20DZAKI.docx" class="projects__button">
+                     <a href="https://github.com/LamnidarMuharamsah/Prediksi_Harga_Rumah_Dengan_Python/blob/main/PrediksiHargaRumah.ipynb" class="projects__button">
                         View Project <i class="ri-external-link-fill"></i>
                      </a>
                   </div>  
-
+                  
                </article>
-               <article class="projects">
-                  <img src="isi" alt="projects image" class="projects__img">
-
-                   <div class="projects">
-                     <span class="projects__subtitle">Library system</span>
-                     <h2 class="projects__title">System</h2>
-
-                     <a href="https://github.com/muhammaddz4ki/Muhammad_dzaki/blob/346d3a8948905b1003cfd269e8d3f46dc9a433bb/UAS_LAPORAN%20PROJEK%20FINAL_MUHAMMAD%20DZAKI%20223443042.docx" class="projects__button">
-                        View Project <i class="ri-external-link-fill"></i>
-                     </a>
-                  </div>  
-
+            </div>
          </section>
+
   
       <!--==================== FOOTER ====================-->
       <section class="contact section" id="contact">
