--- a/index.html
+++ b/index.html
@@ -221,26 +221,26 @@
             </h2>
 <div class="projects__container contianer grid">
                <article class="projects__card">
-                  <img src="assets/img/bike.jfif" alt="projects image" class="projects__img">
+                  <img src="games children.svg" alt="projects image" class="projects__img">
 
                    <div class="projects__modal">
                      <span class="projects__subtitle">CHILDREN GAMAES</span>
                      <h2 class="projects__title">GAMES</h2>
 
-                     <a href="https://github.com/LamnidarMuharamsah/Cyclistic_Bike_Trip/blob/main/cyclistic-bike-share-project.ipynb" class="projects__button">
+                     <a href="https://github.com/muhammaddz4ki/Muhammad_dzaki/blob/7f6e06b018e3f572d4b18b1294ab07f0acb99538/LAPORAN%20PRAKTEK%20AKA%20MUHAMMAD%20DZAKI.docx" class="projects__button">
                         View Project <i class="ri-external-link-fill"></i>
                      </a>
                   </div>  
 
                </article>
                <article class="projects__card">
-                  <img src="assets/img/project-img-1.jpg" alt="projects image" class="projects__img">
+                  <img src="AI.svg" alt="projects image" class="projects__img">
 
                    <div class="projects__modal">
                      <span class="projects__subtitle">AI API</span>
                      <h2 class="projects__title" >AI</h2>
 
-                     <a href="https://drive.google.com/file/d/1kN7xsIud8cBHEP0lcfnet6KvNwpxmXWU/view?usp=sharing" class="projects__button">
+                     <a href="https://github.com/muhammaddz4ki/Muhammad_dzaki/blob/7f6e06b018e3f572d4b18b1294ab07f0acb99538/223443041_muhammad%20dzaki%20projek%20aka.docx" class="projects__button">
                         View Project <i class="ri-external-link-fill"></i>
                      </a>
                   </div>  
@@ -253,7 +253,7 @@
                      <span class="projects__subtitle">LIBRARY SYSTEM</span>
                      <h2 class="projects__title">SYSTEM</h2>
 
-                     <a href="https://github.com/LamnidarMuharamsah/Prediksi_Harga_Rumah_Dengan_Python/blob/main/PrediksiHargaRumah.ipynb" class="projects__button">
+                     <a href="https://github.com/muhammaddz4ki/Muhammad_dzaki/blob/7f6e06b018e3f572d4b18b1294ab07f0acb99538/UAS_LAPORAN%20PROJEK%20FINAL_MUHAMMAD%20DZAKI%20223443042.docx" class="projects__button">
                         View Project <i class="ri-external-link-fill"></i>
                      </a>
                   </div>  
