--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 
                </article>
                <article class="projects__card">
-                  <img src="assets/img/project-img-4.jpg" alt="projects image" class="projects__img">
+                  <img src="library system.svg" alt="projects image" class="projects__img">
 
                    <div class="projects__modal">
                      <span class="projects__subtitle">LIBRARY SYSTEM</span>
