--- a/index.html
+++ b/index.html
@@ -308,5 +308,33 @@
 
       <!--=============== MAIN JS ===============-->
       <script src="main.js"></script>
-   </body>
+   
+   <!-- Link Remix Icons -->
+   <link href="https://cdn.jsdelivr.net/npm/remixicon@3.0.0/fonts/remixicon.css" rel="stylesheet">
+
+   <!-- Link ScrollReveal CSS -->
+   <link rel="stylesheet" href="https://unpkg.com/scrollreveal">
+
+   <style>
+      /* Define any additional CSS styles here */
+   </style>
+</head>
+<body>
+   <!-- Your existing HTML content -->
+
+   <!-- Include ScrollReveal JS -->
+   <script src="https://unpkg.com/scrollreveal"></script>
+
+   <!-- Your existing JS code or scripts -->
+
+   <script>
+      // Initialize ScrollReveal with delay
+      ScrollReveal().reveal('.home__data, .home__social,.contact__container, .footer__container', { origin: 'left', delay: 700 });
+      ScrollReveal().reveal('.home__image', { origin: 'right', delay: 700 });
+      ScrollReveal().reveal('.about__data,.data__skill', { origin: 'left', delay: 700 });
+      ScrollReveal().reveal('.about__data, .skill__projects', { origin: 'right', delay: 700 });
+      ScrollReveal().reveal('.projects__card', { interval: 100, delay: 500 });
+      ScrollReveal().reveal('.contact__container', { origin: 'left', delay: 700 });
+   </script>
+</body>
 </html>
