--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
          duration: 2500,
          delay: 500
       });
-      ScrollReveal().reveal('.about__img, .skills__content', {
+      ScrollReveal().reveal('.skills__content', {
          origin: 'right',
          distance: '60px',
          duration: 2500,
