--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                   <li class="nav__item">
                      <a href="#contact" class="nav__link">Contact</a>
                   </li>
+                    <li class="nav__item">
+                        <a href="tugas1.html" class="nav__link">Tugas</a>
+                     </li>
                </ul>
 
                <!-- Close Button -->
