--- a/tugas1.html
+++ b/tugas1.html
@@ -32,7 +32,7 @@
           </div>
        </article>
  
-       <!-- Artikel projek lainnya -->s
+       <!-- Artikel projek lainnya -->
     </div>
  </section>
 
