--- a/tugas1.html
+++ b/tugas1.html
@@ -20,13 +20,13 @@
  
     <div class="projects__container container grid">
        <article class="projects__card">
-          <img src="assignment1.svg" alt="project image" class="projects__img">
+          <img src="logo tugas 1.png" alt="Tugas 1" class="projects__img">
  
           <div class="projects__modal">
              <span class="projects__subtitle">Project 1</span>
              <h2 class="projects__title">Subject A</h2>
  
-             <a href="link_tugas_1.docx" class="projects__button">
+             <a href="https://docs.google.com/document/d/1QLzI7920jNmFr11gXvJgR_TOezoAmMb4Etbn19usO9Q/edit?usp=sharing" class="projects__button">
                 View Project <i class="ri-external-link-fill"></i>
              </a>
           </div>
