--- a/tugas1.html
+++ b/tugas1.html
@@ -23,8 +23,8 @@
           <img src="logo tugas 1.png" alt="Tugas 1" class="projects__img">
  
           <div class="projects__modal">
-             <span class="projects__subtitle">Project 1</span>
-             <h2 class="projects__title">Subject A</h2>
+             <span class="projects__subtitle">Tugas 1</span>
+             <h2 class="projects__title">Resistor & sketsa web</h2>
  
              <a href="https://docs.google.com/document/d/1QLzI7920jNmFr11gXvJgR_TOezoAmMb4Etbn19usO9Q/edit?usp=sharing" class="projects__button">
                 View Project <i class="ri-external-link-fill"></i>
