--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                      <span class="projects__subtitle">CHILDREN GAMAES</span>
                      <h2 class="projects__title">GAMES</h2>
 
-                     <a href="https://github.com/muhammaddz4ki/Muhammad_dzaki/blob/7f6e06b018e3f572d4b18b1294ab07f0acb99538/LAPORAN%20PRAKTEK%20AKA%20MUHAMMAD%20DZAKI.docx" class="projects__button">
+                     <a href="https://1drv.ms/w/s!AujdrgDzGKHqmW8aVwSQeEvaTtxt?e=epnLzl" class="projects__button">
                         View Project <i class="ri-external-link-fill"></i>
                      </a>
                   </div>  
@@ -243,7 +243,7 @@
                      <span class="projects__subtitle">AI API</span>
                      <h2 class="projects__title" >AI</h2>
 
-                     <a href="https://github.com/muhammaddz4ki/Muhammad_dzaki/blob/7f6e06b018e3f572d4b18b1294ab07f0acb99538/223443041_muhammad%20dzaki%20projek%20aka.docx" class="projects__button">
+                     <a href="https://docs.google.com/document/d/1-zfFKqcd4gNUZzOec4XBqhj-60pirZ9oWyrG8jNRuVE/edit?usp=sharing" class="projects__button">
                         View Project <i class="ri-external-link-fill"></i>
                      </a>
                   </div>  
@@ -256,7 +256,7 @@
                      <span class="projects__subtitle">LIBRARY SYSTEM</span>
                      <h2 class="projects__title">SYSTEM</h2>
 
-                     <a href="https://github.com/muhammaddz4ki/Muhammad_dzaki/blob/7f6e06b018e3f572d4b18b1294ab07f0acb99538/UAS_LAPORAN%20PROJEK%20FINAL_MUHAMMAD%20DZAKI%20223443042.docx" class="projects__button">
+                     <a href="https://1drv.ms/w/s!AujdrgDzGKHqmW4_LFphHTgi25PO?e=xwnCPv" class="projects__button">
                         View Project <i class="ri-external-link-fill"></i>
                      </a>
                   </div>  
