--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                      <span class="projects__subtitle">CHILDREN GAMAES</span>
                      <h2 class="projects__title">GAMES</h2>
 
-                     <a href="https://1drv.ms/w/s!AujdrgDzGKHqmW8aVwSQeEvaTtxt?e=epnLzl" class="projects__button">
+                     <a href="https://docs.google.com/document/d/1NpJ2Jl7zfc7_Q4Zom3ICdxS_CSJFa2zK/edit?usp=sharing&ouid=104168531398073475540&rtpof=true&sd=true" class="projects__button">
                         View Project <i class="ri-external-link-fill"></i>
                      </a>
                   </div>  
@@ -256,7 +256,7 @@
                      <span class="projects__subtitle">LIBRARY SYSTEM</span>
                      <h2 class="projects__title">SYSTEM</h2>
 
-                     <a href="https://1drv.ms/w/s!AujdrgDzGKHqmW4_LFphHTgi25PO?e=xwnCPv" class="projects__button">
+                     <a href="https://docs.google.com/document/d/17podR1nDnig2qLJGwLX87mz8y2S2uNy5/edit?usp=sharing&ouid=104168531398073475540&rtpof=true&sd=true" class="projects__button">
                         View Project <i class="ri-external-link-fill"></i>
                      </a>
                   </div>  
