--- a/tugas1.html
+++ b/tugas1.html
@@ -23,14 +23,37 @@
           <img src="logo tugas 1.png" alt="Tugas 1" class="projects__img">
  
           <div class="projects__modal">
-             <span class="projects__subtitle">Tugas 1</span>
-             <h2 class="projects__title">Resistor & sketsa web</h2>
+             <span class="projects__subtitle">TUGAS 1</span>
+             <h2 class="projects__title">SKETSA WEB</h2>
  
              <a href="https://docs.google.com/document/d/1QLzI7920jNmFr11gXvJgR_TOezoAmMb4Etbn19usO9Q/edit?usp=sharing" class="projects__button">
                 View Project <i class="ri-external-link-fill"></i>
              </a>
           </div>
        </article>
+       <article class="projects__card">
+         <img src="AI.svg" alt="projects image" class="projects__img">
+
+          <div class="projects__modal">
+            <span class="projects__subtitle">TUGAS 2</span>
+            <h2 class="projects__title" >RESISTOR</h2>
+
+            <a href="https://docs.google.com/document/d/1vB-KWvICOgw_rA-yIsMtvyoAgwsuOSBg/edit?usp=sharing&ouid=104168531398073475540&rtpof=true&sd=true" class="projects__button">
+               View Project <i class="ri-external-link-fill"></i>
+            </a>
+         </div>  
+      </article>
+         <article class="projects__card">
+            <img src="AI.svg" alt="projects image" class="projects__img">
+
+             <div class="projects__modal">
+               <span class="projects__subtitle">Tugas 3</span>
+               <h2 class="projects__title" >ARDUINO</h2>
+
+               <a href="https://docs.google.com/document/d/1kgPhnD7akaFGtvm9QAU4-EwDXNk7EKPy/edit?usp=sharing&ouid=104168531398073475540&rtpof=true&sd=true" class="projects__button">
+                  View Project <i class="ri-external-link-fill"></i>
+               </a>
+            </div>  
  
        <!-- Artikel projek lainnya -->
     </div>
