--- a/tugas1.html
+++ b/tugas1.html
@@ -32,7 +32,7 @@
           </div>
        </article>
        <article class="projects__card">
-         <img src="AI.svg" alt="projects image" class="projects__img">
+         <img src="gambar tugas resistor.png" alt="projects image" class="projects__img">
 
           <div class="projects__modal">
             <span class="projects__subtitle">TUGAS 2</span>
@@ -44,7 +44,7 @@
          </div>  
       </article>
          <article class="projects__card">
-            <img src="AI.svg" alt="projects image" class="projects__img">
+            <img src="gambar tugas arduino.png" alt="projects image" class="projects__img">
 
              <div class="projects__modal">
                <span class="projects__subtitle">Tugas 3</span>
