--- a/index.html
+++ b/index.html
@@ -120,21 +120,27 @@
          </section>
 
          <!--==================== ABOUT ====================-->
-         <section class="about section" id="about">
+        <section class="about section" id="about">
             <div class="about__container container grid">
-               <div class="about__data">
-                  <h3 class="section__subtitle">
-                     My <span>Intro</span> 
-                  </h3>
-
-                  <h2 class="section__title">
-                     About Me
-                  </h2>
-
-                  <p class="about__description">
-                    
-                    Halo semuanya, saya Muhammad Dzaki dan biasa dipanggil Dzaki. Selamat datang di web saya.
-                   <br><br>Saya adalah seorang mahasiswa teknik informatika yang memiliki motivasi tinggi untuk meningkatkan kemampuan saya. Saya berasal dari politeknik manufaktur bandung. saya percaya bahwa setiap pengalaman hidup merupakan kesempatan untuk belajar dan berkembang, dan saya selalu berusaha untuk menjadi pribadi lebih baik.
+                <div class="about__data">
+                    <h3 class="section__subtitle">
+                        My <span>Intro</span>
+                    </h3>
+                    <h2 class="section__title">
+                        About Me
+                    </h2>
+                    <p class="about__description">
+                        Halo semuanya, perkenalkan<br>
+                        <span style="font-weight: bold;">
+                            Nama : Muhammad Dzaki<br>
+                            NIM : 223443041<br>
+                            Tempat, Tanggal Lahir: Bengkulu, 4 Juni 2004<br>
+                            Jurusan : Teknik Otomasi Manufaktur dan Mekatronika<br>
+                            Program Studi: (D4)Teknologi Rekayasa Informatika Industri<br>
+                            Asal Daerah : Bengkulu<br>
+                            Kebangsaan: Indonesia
+                        </span>
+                    </p>
                   </p>
                   <a href="#contact" class="button">Contact Me</a>
                </div>
