--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         </pattern>
                   
                         <!-- Insert your profile (recommended size: 640 x 940) -->
-                        <image class="home__img" id="imageBlob" width="640" height="925" href="gambar dzaki 1.svg"/>
+                        <image class="home__img" id="imageBlob" width="640" height="925" href="foto dzaki.jpeg"/>
                      </defs>
                   </svg>
                </div>
