--- a/tugas1.html
+++ b/tugas1.html
@@ -54,7 +54,18 @@
                   View Project <i class="ri-external-link-fill"></i>
                </a>
             </div>  
- 
+ </article>
+         <article class="projects__card">
+            <img src="diode_5840509.png" alt="projects image" class="projects__img">
+
+             <div class="projects__modal">
+               <span class="projects__subtitle">Tugas 3</span>
+               <h2 class="projects__title" >DIODE</h2>
+
+               <a href="https://docs.google.com/document/d/1ZJtTISJWypA7NqG0pZ4pUM-iOVjJRtdUlfXcJqH9VMI/edit?usp=sharing" class="projects__button">
+                  View Project <i class="ri-external-link-fill"></i>
+               </a>
+            </div>  
        <!-- Artikel projek lainnya -->
     </div>
  </section>
