--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                      <a href="https://github.com/muhammaddz4ki" target="_blank" class="home__social-link">
                         <i class="ri-github-fill"></i>
                      </a>
-                     <a href="" target="_blank" class="home__social-link">
+                     <a href="https://www.linkedin.com/in/muhammad-dzaki-931148313?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BW9ceSNHHTQ%2B7TYuApMn8ag%3D%3D" target="_blank" class="home__social-link">
                         <i class="ri-linkedin-box-line"></i>
                      </a>
                      </div>
