--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                  <a href="https://www.instagram.com/muhammad__dzaki/" target="_blank" class="footer__social-link">
                   <i class="ri-instagram-line"></i>
                  </a>
-                 <a href="https://linkedin.com/in/muhammad dzaki/" target="_blank" class="footer__social-link">
+                 <a href="https://www.linkedin.com/in/muhammad-dzaki-931148313?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BW9ceSNHHTQ%2B7TYuApMn8ag%3D%3D" target="_blank" class="footer__social-link">
                   <i class="ri-linkedin-box-fill"></i>
                  </a>
                  <a href="https://wa.me/6285269617993" target="_blank" class="footer__social-link">
