--- a/index.html
+++ b/index.html
@@ -266,6 +266,20 @@
                         View Project <i class="ri-external-link-fill"></i>
                      </a>
                   </div>  
+
+                  </article>
+               <article class="projects__card">
+                  <img src="logo rental mobil.png" alt="projects image" class="projects__img">
+
+                   <div class="projects__modal">
+                     <span class="projects__subtitle">WEB RENTAL MOBIL</span>
+                     <h2 class="projects__title" >RENTAL MOBIL WEB</h2>
+
+                     <a href="https://docs.google.com/document/d/16E1K6I48RHyTyMiOOi7diKG1VP34O51bl6QKbtQvHvE/edit?usp=sharing" class="projects__button">
+                        View Project <i class="ri-external-link-fill"></i>
+                     </a>
+                  </div>  
+
                   
                </article>
             </div>
