--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
                     <li class="nav__item">
                         <a href="tugas1.html" class="nav__link">Tugas</a>
                      </li>
+
+                  <li class="nav__item">
+                   <a href="#video-projects" class="nav__link">Videos</a>
+                        </li>
+
                </ul>
 
                <!-- Close Button -->
@@ -284,6 +289,28 @@
                </article>
             </div>
          </section>
+
+         <!--==================== VIDEO ====================-->
+<section class="video-projects section" id="video-projects">
+   <h3 class="section__subtitle">
+       My <span>Videos</span>
+   </h3>
+
+   <h2 class="section__title">
+       Video
+   </h2>
+
+   <div class="video-projects__container container grid">
+       <article class="video-projects__card">
+           <video controls class="video-projects__video">
+               <source src="path/to/your/video1.mp4" type="video/mp4">
+               Your browser does not support the video tag.
+           </video>
+           <div class="video-projects__modal">
+               <span class="video-projects__subtitle">Video Title 1</span>
+               <h2 class="video-projects__title">Video Description 1</h2>
+           </div>
+       </article>
 
   
       <!--==================== FOOTER ====================-->
