--- a/index.html
+++ b/index.html
@@ -311,6 +311,9 @@
                <h2 class="video-projects__title">Video Description 1</h2>
            </div>
        </article>
+       </div>
+</section>
+
 
   
       <!--==================== FOOTER ====================-->
