--- a/index.html
+++ b/index.html
@@ -290,25 +290,25 @@
             </div>
          </section>
 
-         <!--==================== VIDEO ====================-->
+         <!--==================== VIDEO DRONE ====================-->
 <section class="video-projects section" id="video-projects">
    <h3 class="section__subtitle">
        My <span>Videos</span>
    </h3>
 
    <h2 class="section__title">
-       Video
+       Video drone
    </h2>
 
    <div class="video-projects__container container grid">
        <article class="video-projects__card">
            <video controls class="video-projects__video">
-               <source src="path/to/your/video1.mp4" type="video/mp4">
+               <source src="video drone 1.mp4" type="video/mp4">
                Your browser does not support the video tag.
            </video>
            <div class="video-projects__modal">
-               <span class="video-projects__subtitle">Video Title 1</span>
-               <h2 class="video-projects__title">Video Description 1</h2>
+               <span class="video-projects__subtitle">DAGO</span>
+               <h2 class="video-projects__title">KOTA BANDUNG 1</h2>
            </div>
        </article>
        </div>
