--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
            </video>
            <div class="video-projects__modal">
                <span class="video-projects__subtitle">DAGO</span>
-               <h2 class="video-projects__title">KOTA BANDUNG 1</h2>
+               <h2 class="video-projects__title">KOTA BANDUNG</h2>
            </div>
        </article>
        </div>
