--- a/index.html
+++ b/index.html
@@ -425,6 +425,15 @@
          duration: 2500,
          delay: 500
       });
+      // Initialize ScrollReveal for Video Projects
+ScrollReveal().reveal('.video-projects__card', {
+    origin: 'bottom',
+    distance: '60px',
+    duration: 2500,
+    delay: 500,
+    interval: 100
+});
+
    </script>
 </body>
 </html>
