--- a/index.html
+++ b/index.html
@@ -303,12 +303,9 @@
    <div class="video-projects__container container grid">
        <article class="video-projects__card">
            <video controls class="video-projects__video">
-               <source src="video drone 1.mp4" type="video/mp4">
+               <source src="" type="video/mp4">
                Your browser does not support the video tag.
            </video>
-           <div class="video-projects__modal">
-               <span class="video-projects__subtitle">DAGO</span>
-               <h2 class="video-projects__title">KOTA BANDUNG</h2>
            </div>
        </article>
        </div>
