--- a/index.html
+++ b/index.html
@@ -308,6 +308,30 @@
            </video>
            </div>
        </article>
+   <div class="video-projects__container container grid">
+       <article class="video-projects__card">
+           <video controls class="video-projects__video">
+               <source src="drone 2.mp4" type="video/mp4">
+               Your browser does not support the video tag.
+           </video>
+           </div>
+       </article>
+   <div class="video-projects__container container grid">
+       <article class="video-projects__card">
+           <video controls class="video-projects__video">
+               <source src="drone 3.mp4" type="video/mp4">
+               Your browser does not support the video tag.
+           </video>
+           </div>
+       </article>
+   <div class="video-projects__container container grid">
+       <article class="video-projects__card">
+           <video controls class="video-projects__video">
+               <source src="drone 9.mp4" type="video/mp4">
+               Your browser does not support the video tag.
+           </video>
+           </div>
+       </article>
        </div>
 </section>
 
