--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                         <div class="about__info-item">
                             <div>
                                 <h3>Age:</h3>
-                                <p>20 Years</p>
+                                <p>21 Years</p>
                             </div>
                         </div>
                         <div class="about__info-item">
@@ -505,7 +505,46 @@
                                 </a>
                             </div>
                         </div>
-                        
+
+                        <div class="github-projects__card">
+                            <div class="github-projects__content-inner">
+                                <i class="ri-github-fill github-projects__icon"></i>
+                                <h3 class="github-projects__title">Data Universitas Indonesia</h3>
+                                <p class="github-projects__description">Flutter app displaying Indonesian universities using the Hipolabs API and local SQLite storage.</p>
+                                <div class="github-projects__tech">
+                                    <span class="github-projects__tech-item">Flutter</span>
+                                    <span class="github-projects__tech-item">SQLite</span>
+                                    <span class="github-projects__tech-item">REST API</span>
+                                </div>
+                            </div>
+                            <div class="github-projects__overlay">
+                                <h3 class="github-projects__overlay-title">Flutter Univ App</h3>
+                                <a href="https://github.com/muhammaddz4ki/app-data-univ-indonesia-flutter" target="_blank" class="github-projects__button">
+                                    View on GitHub <i class="ri-external-link-line"></i>
+                                </a>
+                            </div>
+                        </div>
+
+                        <div class="github-projects__card">
+                            <div class="github-projects__content-inner">
+                                <i class="ri-github-fill github-projects__icon"></i>
+                                <h3 class="github-projects__title">Aplikasi Kota Cimahi</h3>
+                                <p class="github-projects__description">Aplikasi Flutter yang menampilkan informasi dan fitur seputar Kota Cimahi.</p>
+                                <div class="github-projects__tech">
+                                    <span class="github-projects__tech-item">Flutter</span>
+                                    <span class="github-projects__tech-item">Dart</span>
+                                    <span class="github-projects__tech-item">Mobile App</span>
+                                </div>
+                            </div>
+                            <div class="github-projects__overlay">
+                                <h3 class="github-projects__overlay-title">Kota Cimahi App</h3>
+                                <a href="https://github.com/muhammaddz4ki/app-kota-cimahi-flutter" target="_blank" class="github-projects__button">
+                                    View on GitHub <i class="ri-external-link-line"></i>
+                                </a>
+                            </div>
+                        </div>
+
+
                         <div class="github-projects__card">
                             <div class="github-projects__content-inner">
                                 <i class="ri-github-fill github-projects__icon"></i>
