--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
                         <div class="github-projects__card">
                             <div class="github-projects__content-inner">
                                 <i class="ri-github-fill github-projects__icon"></i>
-                                <h3 class="github-projects__title">Data Universitas Indonesia</h3>
+                                <h3 class="github-projects__title">Indonesian Universities App</h3>
                                 <p class="github-projects__description">Flutter app displaying Indonesian universities using the Hipolabs API and local SQLite storage.</p>
                                 <div class="github-projects__tech">
                                     <span class="github-projects__tech-item">Flutter</span>
@@ -528,8 +528,8 @@
                         <div class="github-projects__card">
                             <div class="github-projects__content-inner">
                                 <i class="ri-github-fill github-projects__icon"></i>
-                                <h3 class="github-projects__title">Aplikasi Kota Cimahi</h3>
-                                <p class="github-projects__description">Aplikasi Flutter yang menampilkan informasi dan fitur seputar Kota Cimahi.</p>
+                                <h3 class="github-projects__title">Cimahi City App</h3>
+                                <p class="github-projects__description">A Flutter mobile application that provides information and services related to Cimahi City.</p>
                                 <div class="github-projects__tech">
                                     <span class="github-projects__tech-item">Flutter</span>
                                     <span class="github-projects__tech-item">Dart</span>
