--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                             <div class="drone-projects__overlay">
                                 <span class="drone-projects__category">Mapping</span>
                                 <h3 class="drone-projects__title">Aerial Mapping</h3>
-                                <a href="https://drive.google.com/[your-link]" target="_blank" class="drone-projects__button">
+                                <a href="https://drive.google.com/drive/folders/18Jhq88vICPrjLrO1c-rksMshpoc2tpNw" target="_blank" class="drone-projects__button">
                                     View Projects <i class="ri-external-link-line"></i>
                                 </a>
                             </div>
