--- a/index.html
+++ b/index.html
@@ -544,7 +544,21 @@
                             </div>
                         </div>
 
+                        <div class="github-projects__card">
+                            <div class="github-projects__content-inner">
+                                <i class="ri-github-fill github-projects__icon"></i>
+                                <h3 class="github-projects__title">Aid Verification System</h3>
+                                <p class="github-projects__description">A beneficiary verification system for food aid, built using Flutter, Laravel, and Vue in a single monorepo.</p>
+                                <div class="github-projects__tech">
+                                    <span class="github-projects__tech-item">Flutter</span>
+                                    <span class="github-projects__tech-item">Laravel</span>
+                                    <span class="github-projects__tech-item">Vue.js</span>
+                                </div>
+                                <a href="https://github.com/muhammaddz4ki/Sistem-Verifikasi-Bantuan" class="github-projects__link" target="_blank">View Repository</a>
+                            </div>
+                        </div>
 
+                        
                         <div class="github-projects__card">
                             <div class="github-projects__content-inner">
                                 <i class="ri-github-fill github-projects__icon"></i>
