--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
                                     <span class="github-projects__tech-item">Laravel</span>
                                     <span class="github-projects__tech-item">Vue.js</span>
                                 </div>
-                                <a href="https://github.com/muhammaddz4ki/Sistem-Verifikasi-Bantuan" class="github-projects__link" target="_blank">View Repository</a>
+                                <a href="https://github.com/muhammaddz4ki/Sistem-Verifikasi-Bantuan" class="github-projects__button">
                             </div>
                         </div>
 
