--- a/index.html
+++ b/index.html
@@ -553,8 +553,13 @@
                                     <span class="github-projects__tech-item">Flutter</span>
                                     <span class="github-projects__tech-item">Laravel</span>
                                     <span class="github-projects__tech-item">Vue.js</span>
-                                </div>
-                                <a href="https://github.com/muhammaddz4ki/Sistem-Verifikasi-Bantuan" class="github-projects__button">
+                                 </div>
+                            </div>
+                            <div class="github-projects__overlay">
+                                <h3 class="github-projects__overlay-title">SMKS 15 Project</h3>
+                                <a href="https://github.com/muhammaddz4ki/Sistem-Verifikasi-Bantuan" target="_blank" class="github-projects__button">
+                                    View on GitHub <i class="ri-external-link-line"></i>
+                                </a>
                             </div>
                         </div>
 
